--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,20 @@ jobs:
       with:
         version: '3.9.7'
         ports: '5672:5672'
+
+    - name: Start LocalStack
+      uses: LocalStack/setup-localstack@v0.2.5
+      with:
+        image-tag: 'latest'
+        install-awslocal: 'true'
+        configuration: |
+          SERVICES=sqs
+          DEBUG=0
+
+    - name: Create SQS test queues
+      run: |
+        awslocal sqs create-queue --queue-name test-queue-foo
+        awslocal sqs create-queue --queue-name flows-tickets
   
     - name: Install Linux packages
       run: sudo apt install -y --no-install-recommends postgresql-client
@@ -54,6 +68,11 @@ jobs:
       run: |
         export PGPASSWORD=temba
         go test -p=1 -coverprofile=coverage.text -covermode=atomic ./...
+      env:
+        TEST_SQS_SQSTEST: 1
+        AWS_ACCESS_KEY_ID: 'test'
+        AWS_SECRET_ACCESS_KEY: 'test'
+        AWS_DEFAULT_REGION: 'us-east-1'
 
     - name: Upload coverage
       if: success()
